--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flash-message": "^1.0.8",
+    "react-hook-form": "^7.25.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
@@ -17,9 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "json": "json-server --watch db.json --port 5001",
-
     "dev": "concurrently \"npm start\" \"npm run json-server\"",
-
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
