--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "src/server.js",
     "json": "json-server --watch db.json --port 5001",
     "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "build": "react-scripts build",
